Update app name in manifest

--- a/gccapp/public/manifest.json
+++ b/gccapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Global Citizenship",
+  "name": "Global Citizenship course application",
   "icons": [
     {
       "src": "favicon.ico",
