--- a/gccapp/package.json
+++ b/gccapp/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
+    "use-local-storage": "^3.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.2"
   },
